[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/famine.png" type="Texture" id=1]
[ext_resource path="res://assets/famine_attack.png" type="Texture" id=2]
[ext_resource path="res://assets/famine_idle2.png" type="Texture" id=3]
[ext_resource path="res://assets/famine_attack2.png" type="Texture" id=4]
[ext_resource path="res://famine_enemy.gd" type="Script" id=5]
[ext_resource path="res://assets/attack.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 512, 256 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 512, 256 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 1024, 0, 512, 256 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 512, 256 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 512, 256 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 512, 256 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "attack2",
"speed": 3.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle2",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle1",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "attack1",
"speed": 3.0
} ]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1

[sub_resource type="CircleShape2D" id=10]
radius = 25.0

[sub_resource type="Curve" id=11]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
angle_curve = SubResource( 12 )
scale = 15.0
scale_random = 1.0
scale_curve = SubResource( 14 )
color = Color( 1, 0.705882, 0, 1 )

[node name="FamineEnemy" type="KinematicBody2D" groups=[
"enemies",
"famine",
]]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "idle1"
playing = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 140.0
margin_top = 662.0
margin_right = 1140.0
margin_bottom = 682.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="ShootLeft1" type="Position2D" parent="."]
position = Vector2( -154.145, 31.284 )

[node name="ShootRight1" type="Position2D" parent="."]
position = Vector2( 161.914, 51.5453 )

[node name="ShootLeft2" type="Position2D" parent="."]
position = Vector2( -154.12, 51.2924 )

[node name="ShootRight2" type="Position2D" parent="."]
position = Vector2( 161.751, 26.9874 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -103.695 )
shape = SubResource( 10 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -103.875 )
amount = 35
local_coords = false
process_material = SubResource( 15 )

[node name="Attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
